# retro_emulator

./: README.md  analyze_output.txt  pubspec.yaml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  retroverse_bridge.cpp  retroverse_bridge.h
assets/roms/: catalog.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/constants/: api_constants.dart  app_constants.dart
lib/core/errors/: failures.dart
lib/core/extensions/: context_extensions.dart  string_extensions.dart
lib/core/theme/: app_colors.dart  app_text_styles.dart  app_theme.dart
lib/core/utils/: file_utils.dart
lib/features/achievements/: achievements_screen.dart
lib/features/dashboard/: dashboard_screen.dart
lib/features/emulator/: emulator_screen.dart
lib/features/game_detail/: game_detail_screen.dart
lib/features/home/: home_screen.dart
lib/features/save_states/: save_states_screen.dart
lib/features/search/: search_screen.dart
lib/features/settings/: controller_layout_editor_screen.dart  controller_settings_screen.dart  (+2 more)
lib/native_bridge/: emulator_bridge.dart  libretro_ffi.dart
lib/router/: app_router.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
tool/: sync_rom_assets.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+34 files in other folders)
